--- a/index.html
+++ b/index.html
@@ -26,18 +26,24 @@ body{
     }
     *{box-sizing:border-box}
     body{
-      margin:0;
-      font-family: ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial;
-      color:var(--text);
-      min-height:100svh;
-      display:grid;
-      place-items:center;
-      background: radial-gradient(1200px 600px at 20% 20%, var(--bg2), transparent 55%),
-                  radial-gradient(1000px 500px at 80% 30%, #ffe7d6, transparent 55%),
-                  linear-gradient(180deg, var(--bg1), #fff);
-      overflow-x:hidden;
-  	  overflow-y:auto;
-    }
+  margin:0;
+  font-family: ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial;
+  color:var(--text);
+
+  /* ✅ Mobile scroll friendly */
+  min-height:100svh;
+  display:flex;
+  justify-content:center;
+  align-items:flex-start;
+  padding: 18px 0;
+
+  background: radial-gradient(1200px 600px at 20% 20%, var(--bg2), transparent 55%),
+              radial-gradient(1000px 500px at 80% 30%, #ffe7d6, transparent 55%),
+              linear-gradient(180deg, var(--bg1), #fff);
+
+  overflow-x:hidden;
+}
+
 
     /* Corazones de fondo */
     .hearts{
@@ -414,4 +420,5 @@ btnNo.addEventListener("touchstart", (e) => {
   </script>
 </body>
 </html>
+
 
